# offline-client

./: application.ini.in  chrome.manifest  configure.in
chrome/ckeditor/content/bindings/ckeditor/: ckeditor.html
chrome/dcpOffline/: dcpoffline-base.manifest
chrome/dcpOffline/components/: docid_autocomplete.js
chrome/dcpOffline/content/: main.js
chrome/dcpOffline/content/bindings/system/: base-attributes.xml  dateMaskInput.xml  dcpoffline-system-bindings.css  dcpoffline-system-look.css  docid-attributes-edit.xml  leaf-attributes-edit.xml  leaf-attributes-view.xml  node-attributes-edit.xml  node-attributes-view.xml
chrome/dcpOffline/content/css/: main.css
chrome/dcpOffline/content/dialogs/: endOfSynchronize.js  endOfSynchronize.xul  simpleSynchro.js  synchro.js
chrome/dcpOffline/content/overlays/: authent.js  synchro.js  synchro.xul
chrome/dcpOffline/locale/en_US/: main.dtd  main.properties  wizard.dtd
chrome/dcpOffline/locale/en_US/bindings/: leaf-attributes-binding.dtd  leaf-attributes-binding.properties
chrome/dcpOffline/locale/fr_FR/: main.dtd  main.properties  wizard.dtd
chrome/dcpOffline/locale/fr_FR/bindings/: leaf-attributes-binding.dtd  leaf-attributes-binding.properties
chrome/dcpOffline/locale/kl_GN/: main.dtd  main.properties
chrome/dcpOffline/locale/kl_GN/bindings/: leaf-attributes-binding.dtd  leaf-attributes-binding.properties
chrome/dcpOffline/modules/: dateMaskUtil.jsm  fdl-data-debug.jsm  fileManager.jsm  lexer.jsm  moment.jsm  offline-debug.jsm  offlineSynchronize.jsm  storageManager.jsm
defaults/preferences/: ZZ_prefs.js
(+2 files in other folders)
